# QtGainable

./: CMakeLists.txt  README.md  affichecons.cpp  canicule.cpp  canicule.h  chauffage.cpp  chauffage.h  consignes.cpp  consignes.h  ds18b20.cpp  ds18b20.h  filtre.cpp  filtre.h  froid.cpp  froid.h  gainable.cpp  gainable.h  hysteresisvitesses.cpp  hysteresisvitesses.h  main.cpp  mainwindow.cpp  mainwindow.h  modifcons.cpp  relais.cpp  relais.h  sondes.cpp  temperatures.cpp  temperatures.h  threadsondes.cpp  threadsondes.h  vitesses.cpp  vitesses.h
